test_regress/t/t_interface_missing_bad.out
%Error: t/t_interface_missing_bad.v:14:4: Cannot find file containing interface: 'foo_intf'
   14 |    foo_intf foo
      |    ^~~~~~~~
%Error: t/t_interface_missing_bad.v:20:4: Cannot find file containing interface: 'foo_intf'
   20 |    foo_intf the_foo ();
      |    ^~~~~~~~
%Error: t/t_interface_missing_bad.v:25:15: Found definition of 'the_foo' as a CELL but expected a variable
   25 |         .foo (the_foo)
      |               ^~~~~~~
%Error: Exiting due to
